fixed dark mode color for right sidebar

--- a/Bear-Style-RoamResearch.css
+++ b/Bear-Style-RoamResearch.css
@@ -6,6 +6,7 @@
     --left-sidebar-color: #182026;
     --left-sidebar-text-and-topbar-button-color: #5c7080;
     --left-sidebar-hover-background-color: #10161a;
+    --right-sidebar-background-color: rgb(216, 225, 232);
     --bright-on-dark-text-color: #f5f8fa; /*used in  left sidebar hover text and in eg. the help menu*/
     --main-body-text-color: #444444;
     --header1-text-color: #202b33;
@@ -35,6 +36,7 @@
         --left-sidebar-color: rgb(44, 45, 47);
         --left-sidebar-text-and-topbar-button-color: rgb(171, 172, 171);
         --left-sidebar-hover-background-color: rgb(83, 83, 84);
+        --right-sidebar-background-color: rgb(45, 45, 49);
         --bright-on-dark-text-color: rgb(217, 216, 218); /*used in  left sidebar hover text and in eg. the help menu*/
         --main-body-text-color: rgb(221, 221, 221);
         --header1-text-color: rgb(206, 218, 228);
@@ -163,7 +165,8 @@
     margin-bottom: 32px;
 }
 #right-sidebar{
-  	margin-top: 50px; /*MY CHANGE layout: make right sidebar not too tall*/
+    margin-top: 50px; /*MY CHANGE layout: make right sidebar not too tall*/
+    background-color: var(--right-sidebar-background-color);
 }
 #right-sidebar .rm-reference-container {
     padding-top: 0px;
